--- a/themes/qgis-theme/languageswitch.html
+++ b/themes/qgis-theme/languageswitch.html
@@ -54,7 +54,7 @@
         }
         // still no langPlugPage: stop, because the language swicher will misbehave
         if (langPlusPage == undefined || langPlusPage.length != 1){
-            alert('This is an documentation error, please report back to QGIS devs.');
+            alert('This is a documentation error, please report back to QGIS devs.');
             return;
         }
         langPlusPage = langPlusPage[0];
@@ -112,7 +112,12 @@
     //
     function gotoLang(lang){
         var currentUrl = window.location.href;
-        var newUrl = currentUrl.replace(currentLang, '/'+lang+'/');
+        if lang not in $languages{
+            var newUrl = currentUrl.replace(currentLang, '/'+en+'/');
+        }
+        else{
+            var newUrl = currentUrl.replace(currentLang, '/'+lang+'/');
+        }
         window.location.href = newUrl;
     }
 
